--- a/assets/css/style.css
+++ b/assets/css/style.css
@@ -1,593 +1,242 @@
 * {
-  margin: 0;
-  padding: 0;
-  box-sizing: border-box;
-  scroll-behavior: smooth;
+    margin: 0 !important;
+    padding: 0 !important;
+    box-sizing: border-box;
 }
 
-:root {
-  --bg-color: #1d8014;
-  --color: #ffffff;
-  --hover: #0383da;
-  --btn-color: white;
+ :root {
+    --bg-color: black;
+    --color-text: white;
+}
+
+html {
+    scroll-behavior: smooth;
 }
 
 body {
-  font-family: sans-serif;
+    font-family: "Proxima Nova";
+    background-image: linear-gradient(#00000038, black), url(https://wallpapercave.com/wp/wp2164176.jpg);
+    background-position: center;
+    background-repeat: no-repeat;
+    background-attachment: fixed;
+    height: 100vh;
 }
-
-::-webkit-scrollbar {
-  width: 15px;
-}
-
-/* Track */
-
-::-webkit-scrollbar-track {
-  box-shadow: inset 0 0 5px;
-}
-
-/* Handle */
-
-::-webkit-scrollbar-thumb {
-  background: var(--bg-color);
-  border-radius: 15%;
-}
-
-
-.top-btn {
-  display: none;
-  cursor: pointer;
-  position: fixed;
-  bottom: 20px;
-  right: 30px;
-  z-index: 99;
-  width: 40px;
-  height: 40px;
-  border-radius: 50%;
-  background: var(--bg-color);
-  color: white;
-  border: none;
-  transition: all 0.4s ease-in;
-  animation: move 2s ease-in linear infinite;
-}
-
-.whatsapp-logo {
-  width: 43px;
-  height: auto;
-  margin-bottom: 20px;
-  transition: all 0.4s ease-in;
-  display: none;
-}
-
-.whatsapp-logo:hover,
-.top-btn:hover {
-  transform: scale(1.2);
-}
-
-#scrollTopBtn {
-  position: fixed;
-  bottom: 50px;
-  right: 25px;
-  display: none;
-  z-index: 1000;
-}
-
-/* width */
-
-.top_header {
-  background: var(--bg-color);
-  border-bottom: 1px solid white;
-}
-
-.top_header i {
-  color: white;
-}
-
-.top_header span {
-  color: white;
-}
-
-/* slide-bar  */
 
 .header {
-  position: sticky;
-  top: 0;
-  width: 100%;
-  z-index: 999;
-  background-color: #1d8014;
-  box-shadow: 0 4px 2px -2px gray;
+    position: sticky !important;
+    top: 0px !important;
+    opacity: 0.9;
+    background-color: var(--bg-color);
+    background: transparent;
+    z-index: 1;
+    animation: slidedown 3s;
 }
 
-.heads-list {
-  list-style: none;
-  padding: 0;
-  margin: 0;
-  display: flex;
-  justify-content: space-around;
+.header span i {
+    color: var(--color-text);
 }
 
-.heads-list li {
-  display: inline;
+@keyframes slidedown {
+    0% {
+        transform: translateY(-170px);
+    }
+    100% {
+        transform: translateY(0);
+    }
 }
 
-.heads-list a {
-  text-decoration: none;
-  color: white;
-  font-weight: bold;
-  font-size: 1.1rem;
-  transition: color 0.3s ease;
-  position: relative;
+.header .logo {
+    color: var(--color-text);
+    text-decoration: none;
+    font-size: 40px;
+    font-weight: bold;
+    text-align: center;
 }
 
-.heads-list li a::after {
-  content: "";
-  position: absolute;
-  height: 3px;
-  width: 0;
-  border-radius: 0 0 10px 10px;
-  background-color: var(--color);
-  left: 0;
-  right: 0;
-  margin: 0 auto;
-  bottom: -6px;
-  transition: all 0.7s;
+.head_list {
+    display: flex;
+    justify-content: space-evenly;
+    list-style-type: none;
 }
 
-.heads-list li a:hover::after {
-  width: 100%;
-  cursor: pointer;
+.head_list li a {
+    font-weight: 600;
+    position: relative;
+    top: 7px;
+    text-decoration: none;
+    font-size: large;
+    color: var(--color-text);
+    transition: all 0.5s ease;
+    position: relative;
+    transition: all 0.8s ease;
 }
 
-.dropdown {
-  position: relative;
-  display: inline-block;
+.head_list li a:hover {
+    color: orange;
+    cursor: pointer;
 }
 
-.dropbtn {
-  color: white;
-  padding: 10px 20px;
-  font-size: 16px;
-  border: none;
-  cursor: pointer;
-  border-radius: 5px;
-}
 
-.dropdown-content {
-  display: none;
-  position: absolute;
-  background-color: #f9f9f9;
-  min-width: 230px;
-  box-shadow: 0px 8px 16px 0px rgba(0, 0, 0, 0.2);
-  z-index: 1;
-  border-radius: 5px;
-}
-
-.dropdown-content a {
-  color: black;
-  padding: 12px 16px;
-  text-decoration: none;
-  display: block;
-}
-
-.dropdown-content a:hover {
-  background-color: #f1f1f1;
-}
-
-.dropdown:hover .dropdown-content {
-  display: block;
-}
-
-/* Sidebar (Slidebar) styling */
+/* slide-bar-start */
 
 .slide-bar {
-  position: fixed;
-  top: 100px;
-  left: 0;
-  width: 100%;
-  z-index: 998;
-  background-color: rgba(0, 0, 0, 0.8);
-  color: #fff;
-  transition: max-height 0.5s ease-out, opacity 0.5s ease-out;
+    position: absolute;
+    top: 85px;
+    z-index: 1;
+    transition: all 3s ease-in;
 }
 
-.slide-bar .card {
-  background-color: transparent;
-  border: none;
+#show_bar .card-body {
+    background-color: var(--bg-color) !important;
 }
 
-.slide-bar .heads-lists {
-  list-style: none;
-  padding: 0;
-  margin: 0;
+.bar_content {
+    display: flex;
+    justify-content: space-evenly;
+    flex-direction: column;
+    list-style-type: none;
 }
 
-.slide-bar .heads-lists a {
-  color: #fff;
-  text-decoration: none;
-  font-size: 1.2rem;
-  display: block;
-  padding: 10px 0;
-  border-bottom: 1px solid #444;
+.bar_content li a {
+    font-weight: 600;
+    text-decoration: none;
+    line-height: 40px;
+    font-size: large;
+    color: var(--color-text);
+    cursor: pointer;
+    transition: all 0.5s ease;
 }
 
-.slide-bar .heads-lists a:hover {
-  color: #007bff;
+.bar_content li a:hover {
+    color: orange;
 }
 
-@media (max-width: 768px) {
-  .header {
-    padding: 10px 0;
-  }
-  .img-fluid {
-    height: 80px;
-    width: 80px;
-  }
-  .slide-bar .heads-lists a {
-    font-size: 1rem;
-  }
-  .fa-bars,
-  .fa-xmark {
-    font-size: 30px;
-  }
-  .top-btn {
-    display: none;
-  }
+
+/* slide-bar-end */
+
+@media only screen and (max-width:767px) {
+    .head_list {
+        display: none;
+    }
 }
 
-.carousel-item {
-  height: 100vh;
-  min-height: 300px;
-  background-size: cover;
-  background-position: center;
-  background-repeat: no-repeat;
+@media only screen and (min-width:768px) {
+    .header span {
+        display: none;
+    }
 }
 
-.video-background-section {
-  position: relative;
-  width: 100%;
-  height: 100%;
-  overflow: hidden;
+.head_section {
+    background: transparent;
+    height:100vh;
+    width: 100%;
+    display: flex;
+    justify-content: center;
+    align-items: center;
+    overflow: hidden;
 }
 
-.video-background-section video {
-  position: absolute;
-  top: 50%;
-  left: 50%;
-  width: 100%;
-  height: 100%;
-  object-fit: cover;
-  transform: translate(-50%, -50%);
-  z-index: -1;
+.heading_banner {
+    font-size: 5rem !important;
+    font-weight: bold;
+    font-style: italic;
+    color: white;
 }
 
-.banner_heading {
-  font-size: 3rem;
-  color: white;
+.banner_text {
+    font-size: 1.1rem;
+    font-weight: bold;
+    color: white;
+    word-spacing: 2px;
+    letter-spacing: 1.5px;
 }
 
-.banner_paragraph {
-  font-size: 1.2rem;
-  color: white;
+.head_button1 {
+background: transparent;
+    color: white;
+    transition: all 0.8s ease;
+    padding: 12px 10px !important;
+    font-size: small;
+    word-spacing: 1.5px;
+    letter-spacing: 1px;
+border: 1px solid white;
+transition: all 2s ease;
 }
 
-.carousel-btn {
-  padding: 10px 25px;
-  border-radius: 5px;
-  background-color: white;
-  transition: all 1s ease-in;
+.head_button1:hover {
+background-color: white;
+color: black;
+}
+.head_button2 {
+background: var(--bg-color);
+        color: var(--color-text);
+        transition: all 0.8s ease;
+        padding: 12px 10px !important;
+        font-size: small;
+        word-spacing: 1.5px;
+        letter-spacing: 1px;
+        transition: all 2s ease;
+    }
+    
+    .head_button2:hover {
+        background-color: var(--color-text);
+        color: var(--bg-color);
+    }
+.content_1,
+.content_3 {
+    background-color: #F3F6FB;
 }
 
-.carousel-btn:hover {
-  box-shadow: 0 57px 0 0 inset var(--bg-color);
-  color: white;
+.content_1 .text,
+.content_3 .text {
+    font-size: large;
+    line-height: 1.8rem;
+    word-spacing: 2px;
 }
 
-@media (max-width: 768px) {
-  .banner_heading {
-    font-size: 3rem;
-  }
-  .banner_paragraph {
-    font-size: 1rem;
-  }
-  .card-section .card-back p {
-    margin: 5px 0 0;
-    font-size: 2.3em;
-  }
-  .card-h2-cable {
-    font-size: 0.6em;
-  }
+.content_1 .service_text {
+    font-size: 50px;
+    color: black;
+    font-weight: 800;
 }
 
-@media (min-width: 768px) {
-  .card-section .card-back p {
-    margin: 5px 0 0;
-    font-size: 2em;
-  }
+.content_1 .text_part,
+.content_3 .text_part {
+    color: black;
+    font-weight: bold;
 }
 
-/* card start  */
-
-.card-section h2 {
-  line-height: 100px;
-  font-weight: 700;
-  font-size: 44px;
-  color: #1d8014;
+.content_button {
+    background-color: var(--bg-color);
+    color: var(--color-text);
+    padding: 11px 0 !important;
 }
 
-.card-section .card-3d {
-  width: 100%;
-  perspective: 1000px;
+.content_button:hover {
+    background-color: var(--color-text);
+    color: var(--bg-color);
 }
 
-.card-section .card-inner {
-  position: relative;
-  width: 100%;
-  padding-top: 150%;
-  /* 3:2 aspect ratio */
-  transform-style: preserve-3d;
-  transition: transform 0.6s;
+.content_2 .text_part {
+    color: white !important;
+    font-weight: bold;
+    font-size: 35px;
 }
 
-.card-section .card-3d:hover .card-inner {
-  transform: rotateY(180deg);
+.content_2 .text {
+    color: white;
+    word-spacing: 2px;
+    font-size: large;
+    line-height: 1.8rem;
 }
 
-.card-section .card-front,
-.card-back {
-  position: absolute;
-  top: 0;
-  left: 0;
-  width: 100%;
-  height: 90%;
-  backface-visibility: hidden;
-  border-radius: 10px;
-  overflow: hidden;
-  box-shadow: 0 4px 8px rgba(0, 0, 0, 0.2);
+.content_button_2 {
+    background-color: white;
+    color: black;
+    font-size: medium;
 }
 
-.card-section .card-front img {
-  width: 100%;
-  height: 100%;
-  object-fit: cover;
-}
-
-.card-section .card-back {
-  background-color: var(--bg-color);
-  color: white;
-  transform: rotateY(180deg);
-  display: flex;
-  flex-direction: column;
-  justify-content: center;
-  align-items: center;
-  text-align: center;
-  padding: 20px;
-}
-
-.card-section .card-back h2 {
-  margin: 0;
-  font-size: 2em;
-  font-weight: 900;
-  color: white;
-}
-
-.card-section .card-back p {
-  margin: 10px 0 0;
-  font-size: 0.9em;
-}
-
-.text-wraper {
-  background-image: url(/prime-metal/assets/img/pexels-alex-tepetidis-3531434-5279317.jpg);
-  background-position: center;
-  background-size: cover;
-  background-repeat: no-repeat;
-}
-.card-section .card-back .order-btn {
-  margin-top: 10px;
-  padding: 10px 20px;
-  background-color: #007bff;
-  color: white;
-  border: none;
-  cursor: pointer;
-  border-radius: 5px;
-}
-.card-section .card-back .order-btn:hover {
-  background-color: black;
-}
-
-/* contact-form  */
-
-.contact_card {
-  background-color: white;
-  border-radius: 20px;
-  border: 5px solid #1d8014;
-  box-shadow: none;
-}
-
-.contact_card {
-  margin-bottom: -90px;
-}
-
-.contact_card #contactForm .form-control {
-  height: 57px !important;
-  border-radius: 10px !important;
-  box-shadow: none !important;
-}
-
-.contact_card #contactForm .text-area {
-  height: 150px !important;
-}
-
-.contact_card #contactForm .btn-outline-success {
-  color: white;
-  padding: 16px;
-  margin-top: 20px;
-  border-radius: 10px;
-  background: var(--bg-color);
-  transition: all 1s ease-in;
-  border: none;
-}
-
-.btn-outline-success:hover {
-  box-shadow: 0 57px 0 0 inset black;
-  border: 2px solid black;
-}
-
-.wrapper-btn {
-  letter-spacing: 2px;
-  font-size: 1.5rem;
-  background: var(--bg-color);
-  color: white;
-  transition: all 1s ease-in;
-}
-
-.wrapper-btn:hover {
-  box-shadow: 0 57px 0 0 inset white;
-  color: black;
-}
-
-.text-wraper {
-  color: white;
-  height: 450px;
-  width: 100%;
-}
-
-/* footer start  */
-
-footer {
-  background-color: black;
-  color: white;
-  padding: 8px 0;
-}
-
-footer .nav-item {
-  line-height: 1.8rem;
-  list-style-type: none;
-  font-size: 1rem;
-  border-bottom: 1px solid gray;
-  padding: 0.8rem 0;
-}
-
-footer .nav-item a {
-  letter-spacing: 1px;
-  text-transform: uppercase;
-  font-size: 0.9rem;
-  position: relative;
-}
-
-.nav-item-mail {
-  line-height: 1.8rem;
-  list-style-type: none;
-  font-size: 1rem;
-  border-bottom: 1px solid gray;
-  padding: 0.8rem 0;
-  cursor: pointer;
-}
-
-.nav-item-mail a {
-  letter-spacing: 1px;
-  text-transform: uppercase;
-  font-size: 0.9rem;
-}
-
-footer .nav-item a::before {
-  content: ">>>";
-  position: absolute;
-  font-style: italic;
-  left: 0;
-  bottom: 0;
-  font-size: 20px;
-  right: 500px;
-  color: #1d8014;
-}
-
-footer .text-wrap {
-  line-height: 1.4rem;
-  margin-top: 25px;
-  font-size: 1.1rem;
-}
-
-footer span {
-  font-size: 18px;
-}
-
-footer p {
-  height: 4px;
-  background: var(--bg-color);
-  width: 70px;
-}
-
-.copyright {
-  color: white;
-  background-color: black;
-  font-size: 1rem;
-  letter-spacing: 1px;
-}
-
-.copyright .fa-brands {
-  cursor: pointer;
-  transition: all 1s ease;
-  color: white;
-  font-size: 1.2rem;
-}
-
-.copyright .fa-brands:hover {
-  transform: translateY(-5px);
-  color: var(--bg-color);
-}
-
-/* about-page  */
-
-.about {
-  color: white;
-  width: 100%;
-  height: 600px;
-  background-color: black;
-  background-image: url(/assets/img/parallax-2.jpg);
-  background-position: center;
-  background-size: cover;
-  background-repeat: no-repeat;
-}
-
-.about-text {
-  background-color: var(--bg-color);
-  padding: 35px;
-  border-radius: 14px;
-  color: white;
-  margin-top: 10px;
-}
-
-.card-section span {
-  height: 4px;
-  border-radius: 20px;
-  background: var(--bg-color);
-  width: 100px;
-}
-
-.about-text p {
-  font-size: 1.3rem;
-  line-height: 2rem;
-}
-
-/*gallery  */
-
-.gallery-container {
-  padding: 30px 0;
-  background-image: url(./assets/img/parallax-2.jpg);
-}
-
-.gallery-item {
-  margin-bottom: 30px;
-  overflow: hidden;
-}
-
-.gallery-item img {
-  width: 100%;
-  height: 400px;
-  border-radius: 20px;
-  transition: all 0.9s ease;
-}
-
-.gallery-item img:hover {
-  transform: scale(1.1);
-  border-radius: 25px;
+.content_button_2:hover {
+    color: white;
+    background-color: black;
 }
